[gd_scene load_steps=3 format=3 uid="uid://c5l8u3nqg7y6f"]

[ext_resource type="Script" uid="uid://dcfyyo7lceowc" path="res://scenes/context_menu.gd" id="1_context"]
[ext_resource type="Theme" uid="uid://ckorw5avm0nr4" path="res://themes/DarkMode.res" id="2_theme"]

[node name="ContextMenu" type="CanvasLayer"]
script = ExtResource("1_context")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
theme = ExtResource("2_theme")

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_theme")
text = "Menu Title"
horizontal_alignment = 1

[node name="ActionList" type="VBoxContainer" parent="Overlay/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomBar" type="HBoxContainer" parent="Overlay/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Overlay/CenterContainer/PanelContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaginationLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme = ExtResource("2_theme")
text = "Page 1/1"

[node name="CancelLabel" type="Label" parent="Overlay/CenterContainer/PanelContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme = ExtResource("2_theme")
text = "  Cancel  â’·"
